# DS4B2B

./: .gitignore  README.md  pyproject.toml  requirements.txt
Exploración de datos/: 1. Estructuras de proyectos.ipynb
Fundamentos de Python/: 1. Iniciándonos con Python.ipynb  3. Librerías.ipynb  mi_script.py
M0 - Fundamentos de Python/: 1. Iniciándonos con Python.ipynb  3. Librerías.ipynb
M1 - Exploración de datos/: 1. Estructuras de proyectos.ipynb  2. Librerías comunes.ipynb  4. Acceso a funetes de datos.ipynb  4.1 - Snowflake y Snowpark.ipynb  5. Orquetsadores.md
M2 - Fundamentos de ML/M2.1 Familias de modelos/: 1. Optimización.ipynb  2. Regresión.ipynb  4. Agrupaciones de modelos.ipynb
M3 - Deep learning/: 1. Introducción a Keras y Tensorflow.ipynb  3. Transfer learning.ipynb
M4 - IA Generativa/: 6. Prompting.ipynb  README.md
M5 - Aplicaciones de GenAI/: 3. Model Context Protocol.ipynb
M5 - Aplicaciones de GenAI/flowise/: README.md
